crates/openracing-fmea/tests/snapshots/snapshot_expansion_tests__recovery_procedure_overcurrent.snap
---
source: crates/openracing-fmea/tests/snapshot_expansion_tests.rs
expression: proc
---
RecoveryProcedure {
    fault_type: Overcurrent,
    max_attempts: 1,
    retry_delay: 100ms,
    timeout: 60s,
    automatic: false,
    steps: [
        RecoveryStep {
            name: "disconnect",
            description: "Disconnect load",
            timeout: 100ms,
            optional: false,
        },
        RecoveryStep {
            name: "inspect",
            description: "Inspect hardware",
            timeout: 30s,
            optional: false,
        },
        RecoveryStep {
            name: "verify",
            description: "Verify no short circuit",
            timeout: 5s,
            optional: false,
        },
    ],
}
