crates/openracing-fmea/tests/snapshots/snapshot_expansion_tests__recovery_result_failed.snap
---
source: crates/openracing-fmea/tests/snapshot_expansion_tests.rs
expression: result
---
RecoveryResult {
    status: Failed,
    duration: 5s,
    attempts: 3,
    error: Some(
        "device unresponsive",
    ),
}
