crates/openracing-fmea/tests/snapshots/snapshot_expansion_tests__recovery_result_success.snap
---
source: crates/openracing-fmea/tests/snapshot_expansion_tests.rs
expression: result
---
RecoveryResult {
    status: Completed,
    duration: 250ms,
    attempts: 1,
    error: None,
}
