crates/openracing-fmea/tests/snapshots/snapshot_expansion_tests__recovery_result_timeout.snap
---
source: crates/openracing-fmea/tests/snapshot_expansion_tests.rs
expression: result
---
RecoveryResult {
    status: Timeout,
    duration: 10s,
    attempts: 2,
    error: None,
}
