crates/openracing-fmea/tests/snapshots/snapshot_expansion_tests__recovery_status_cancelled.snap
---
source: crates/openracing-fmea/tests/snapshot_expansion_tests.rs
expression: "RecoveryStatus::Cancelled"
---
Cancelled
